/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
}

repositories {
    mavenCentral()
    flatDir {
        dirs "$rootProject.projectDir/ex-lib"
    }
/*
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
*/
}

group = 'com.lwohvye'
version = '4.0.0-alpha'
java.sourceCompatibility = JavaVersion.VERSION_19

java {
    withSourcesJar()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += '--enable-preview'
}
